# CG_Projeto

./: README.md
Fase1/: .clang-format  .gitignore  CMakeLists.txt
Fase1/demo_scenes/: box.3d  cone.3d  plane.3d  sphere.3d
Fase1/include/engine/: config.hpp
Fase1/include/engine/parse/util/: fp.hpp
Fase1/include/engine/parse/xml/: world.hpp
Fase1/include/engine/parse/xml/camera/: camera.hpp  projection.hpp
Fase1/include/engine/parse/xml/err/: err.hpp  err_fmt.hpp
Fase1/include/engine/parse/xml/group/: group.hpp
Fase1/include/engine/parse/xml/group/model/: model.hpp  model_list.hpp
Fase1/include/engine/parse/xml/group/transform/: rotate.hpp  transform.hpp  transform_list.hpp
Fase1/include/engine/parse/xml/util/: fp_attr.hpp  xyz.hpp
Fase1/include/engine/render/: keyboard.hpp  renderer.hpp
Fase1/include/engine/render/world/: camera.hpp
Fase1/include/engine/render/world/group/: transform.hpp
Fase1/include/generator/primitives/: box.hpp  cone.hpp  module.hpp  plane.hpp  sphere.hpp
Fase1/include/generator/util/: coord_conv.hpp
Fase1/include/util/: pretty_print.hpp  try.hpp
Fase1/src/engine/: main.cpp
Fase1/src/engine/parse/xml/: world.cpp
Fase1/src/engine/parse/xml/camera/: camera.cpp  projection.cpp
Fase1/src/engine/parse/xml/group/: group.cpp
Fase1/src/engine/parse/xml/group/model/: model.cpp  model_list.cpp
Fase1/src/engine/parse/xml/group/transform/: rotate.cpp  transform.cpp  transform_list.cpp
Fase1/src/engine/render/: renderer.cpp
Fase1/src/generator/: main.cpp
Fase1/src/generator/primitives/: box.cpp  cone.cpp  plane.cpp  sphere.cpp
Fase1/src/generator/util/: coord_conv.cpp
Fase2/: CMakeLists.txt
Fase2/demo_scenes/models/: box.3d  cone.3d  earth.3d  jupiter.3d  mars.3d  mercury.3d  moon.3d  neptune.3d  saturn.3d  sphere.3d  sun.3d  uranus.3d  venus.3d
Fase2/demo_scenes/worlds/: solar_system.xml  solar_system_rotated.xml  test_2_1.xml  test_2_2.xml  test_2_3.xml  test_2_4.xml
Fase2/include/engine/: config.hpp
Fase2/include/engine/parse/xml/: module.hpp  world.hpp
Fase2/include/engine/parse/xml/camera/: camera.hpp  projection.hpp
Fase2/include/engine/parse/xml/err/: err.hpp  err_fmt.hpp
Fase2/include/engine/parse/xml/group/: group.hpp
Fase2/include/engine/parse/xml/util/: number_attr.hpp  xyz.hpp
Fase2/include/engine/render/: keyboard.hpp  renderer.hpp
Fase2/include/engine/render/world/: camera.hpp  world.hpp
Fase2/include/engine/render/world/group/: group.hpp  model.hpp  transform.hpp
Fase2/include/generator/: module.hpp
Fase2/include/generator/err/: err.hpp  err_fmt.hpp
Fase2/include/generator/primitives/: box.hpp  cone.hpp  plane.hpp  sphere.hpp
Fase2/include/util/: coord_conv.hpp  parse_number.hpp  try.hpp
Fase2/lib/nonnull_ptr/: nonnull_ptr.hpp
Fase2/src/engine/: main.cpp
Fase2/src/engine/parse/xml/: world.cpp
Fase2/src/engine/parse/xml/camera/: camera.cpp  projection.cpp
Fase2/src/engine/parse/xml/group/: group.cpp
Fase2/src/engine/render/: renderer.cpp
Fase2/src/generator/: main.cpp
Fase2/src/generator/primitives/: box.cpp  cone.cpp  plane.cpp  sphere.cpp
Fase2/src/util/: coord_conv.cpp
Fase3/: CMakeLists.txt
Fase3/CG-master/examples/worlds/: solar_system_rotated.xml
Fase3/CG-master/include/engine/parse/xml/util/: number_attr.hpp
Fase3/CG-master/include/engine/render/: keyboard.hpp  state.hpp
Fase3/CG-master/include/engine/render/layout/world/: camera.hpp
Fase3/CG-master/include/engine/render/layout/world/group/: model.hpp
Fase3/CG-master/include/generator/: module.hpp
Fase3/CG-master/include/generator/primitives/: box.hpp  cone.hpp
Fase3/CG-master/include/util/: parse_number.hpp
Fase3/CG-master/lib/intrinsics/: branching.hpp
Fase3/CG-master/src/engine/: config.cpp
Fase3/CG-master/src/engine/parse/xml/: xml.cpp
Fase3/CG-master/src/engine/parse/xml/group/transform/: rotate.cpp
Fase3/CG-master/src/engine/render/: io_events.cpp  keyboard.cpp  state.cpp
Fase3/CG-master/src/generator/: main.cpp
Fase3/CG-master/src/generator/primitives/: box.cpp  plane.cpp
Fase3/include/engine/: config.hpp  module.hpp
Fase3/include/engine/parse/xml/err/: err.hpp
Fase3/include/engine/parse/xml/group/: group.hpp
Fase3/include/engine/parse/xml/group/model/: model_list.hpp
Fase3/include/engine/parse/xml/group/transform/: rotate.hpp  transform.hpp  transform_list.hpp
Fase3/include/engine/render/: camera.hpp  io_events.hpp  module.hpp  render.hpp  renderer.hpp
Fase3/include/engine/render/layout/world/group/transform/: scale.hpp
Fase3/include/generator/primitives/: bezier_patch.hpp  plane.hpp  sphere.hpp
Fase3/include/util/: coord_conv.hpp  overload.hpp  try.hpp
Fase3/lib/intrinsics/: arithmetic.hpp
Fase3/src/engine/: main.cpp
Fase3/src/engine/parse/xml/group/model/: model.cpp
Fase3/src/engine/parse/xml/group/transform/: transform.cpp
Fase3/src/engine/render/: render.cpp  renderer.cpp
Fase3/src/generator/primitives/: bezier_patch.cpp  cone.cpp  sphere.cpp
Fase4/: .gitignore  README.md
Fase4/CG-master/: CMakeLists.txt
Fase4/CG-master/examples/worlds/: solar_system.xml  textured_dinamic_solar_system.xml
Fase4/CG-master/include/engine/parse/: module.hpp
Fase4/CG-master/include/engine/render/: state.hpp
Fase4/CG-master/include/generator/: config.hpp
Fase4/CG-master/include/generator/err/: err.hpp
Fase4/CG-master/include/generator/primitives/: bezier_patch.hpp  sphere.hpp
Fase4/CG-master/lib/nonnull_ptr/: nonnull_ptr.hpp
Fase4/CG-master/src/engine/render/: renderer.cpp  state.cpp
Fase4/CG-master/src/generator/primitives/: bezier_patch.cpp  plane.cpp
Fase4/CG-master/src/util/: coord_conv.cpp
Fase4/examples/worlds/: dinamic_solar_system.xml
Fase4/include/engine/parse/xml/: module.hpp  xml.hpp
Fase4/include/generator/err/: err_fmt.hpp
Fase4/include/generator/primitives/: box.hpp  cone.hpp  plane.hpp
Fase4/include/util/: number.hpp
Fase4/lib/brief_int/: brief_int.hpp
Fase4/lib/rapidxml/: rapidxml.hpp
Fase4/src/engine/render/: camera.cpp  render.cpp
Fase4/src/generator/primitives/: box.cpp  cone.cpp  sphere.cpp
(+30 files in other folders)
